update build.md