@@ -1,6 +1,8 @@
 ## Building
 
 ```
+export MAVEN_OPTS='-Xmx512m -XX:MaxPermSize=128m'
+
 mvn package
 ```
 then you can find zip file : `target/ waterdrop-input-hbase-1.0.0-bin.zip`
